RESOLVED FIXED291839
WebContent logs during launch are not emitted
https://bugs.webkit.org/show_bug.cgi?id=291839
Summary WebContent logs during launch are not emitted
Per Arne Vollan
Reported 2025-04-21 05:43:02 PDT
WebContent logs during launch are not emitted when logd is blocked in the sandbox.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-21 05:43:12 PDT
Per Arne Vollan
Comment 2 2025-04-21 05:47:02 PDT
EWS
Comment 3 2025-10-03 14:29:37 PDT
Committed 300971@main (2bf1c7444f37): <https://commits.webkit.org/300971@main> Reviewed commits have been landed. Closing PR #44324 and removing active labels.
WebKit Commit Bot
Comment 4 2025-10-03 15:27:38 PDT
Re-opened since this is blocked by bug 300143
Per Arne Vollan
Comment 5 2025-10-03 16:27:30 PDT
EWS
Comment 6 2025-10-04 08:02:21 PDT
Committed 301000@main (5ad01e38dcce): <https://commits.webkit.org/301000@main> Reviewed commits have been landed. Closing PR #51789 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.